navigation bar complete

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body class="font-inter">
     <header class="navbar">
         <nav class="nav-container">
-            <h2 class="gradiant">TechWave</h2>
+            <h2 class="gradiant">Tech<span class="k">Wave</span></h2>
             <div class="links">
                 <ul>
                     <li><a href="">About</a></li>
@@ -28,7 +29,7 @@
                 </ul>
             </div>
             <div class="button">
-                <button class="btn">Subscribe <i class="fa-sharp-duotone fa-thin fa-right-long"></i></button>
+                <button class="btn-1">Subscribe <i class="fa-solid fa-arrow-right"></i> </button>
 
             </div>
             <div class="hamburger"> <i class="fa-slab fa-regular fa-bars"></i></div>
