--- a/index.html
+++ b/index.html
@@ -32,10 +32,27 @@
                 <button class="btn-1">Subscribe <i class="fa-solid fa-arrow-right"></i> </button>
 
             </div>
-            <div class="hamburger"> <i class="fa-slab fa-regular fa-bars"></i></div>
+            <div class="hamburger"> <img src="assets/hamburger-menu.png" alt=""></div>
+
 
         </nav>
     </header>
+    <section class="banner">
+
+        <div class="banner-container">
+            <div class="img-container">
+                <img src="assets/hero-circle.png" alt="">
+            </div>
+            <div class="banner-title">
+                <h3 class="banner-heading">TechWave</h3>
+                <p class="banner-title">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            </div>
+            <div class="btn-container">
+                <button class="btn-2"><i class="fa-brands fa-spotify"></i>Listen on Spotify</button>
+                <button class="btn-3"><img src="assets/message.png" alt="">Subscribe</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
