--- a/index.html
+++ b/index.html
@@ -53,6 +53,41 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="about-container">
+            <div class="">
+                <h3 class="about-heading">About the Podcast</h3>
+            </div>
+            <div class="about-title">
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.</p>
+                <p>We break down complex topics into digestible insights, explore productivity strategies that
+                    actually work,<br>
+                    and share stories of personal growth from industry leaders.
+                </p>
+                <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                <hr>
+
+            </div>
+            <div class="about-card">
+                <div class="card-info">
+                    <h3 class="card-heading">150K+</h3>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-heading">200+</h3>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-heading">4.9★</h3>
+                    <p>Average Rating</p>
+                </div>
+                <div class="card-info">
+                    <h3 class="card-heading">50+</h3>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
