--- a/index.html
+++ b/index.html
@@ -88,6 +88,100 @@
             </div>
         </div>
     </section>
+    <section class="box">
+        <div class="box-container">
+            <h2 class="box-heading">Why Choose TechWave</h2>
+            <div class="box-info">
+                <div class="box-1">
+                    <img src="assets/headphone.png" alt="">
+                    <h3 class="card-heading">Premium Audio Qualit</h3>
+                    <p class="card-title">Experience crystal-clear sound with professional-grade recording equipment and
+                        expert audio engineering. Every episode is mastered for optimal listening across all devices and
+                        platforms.</p>
+
+                </div>
+                <div class="box-2">
+                    <img src="assets/device.png" alt="">
+                    <h3 class="card-heading">Mobile Friendly</h3>
+                    <p class="card-title">Listen on the go with seamless mobile experience and offline downloads.</p>
+
+                </div>
+                <div class="box-3">
+                    <img src="assets/location.png" alt="">
+                    <h3 class="card-heading">Global Community</h3>
+                    <p class="card-title">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+
+                </div>
+                <div class="box-4">
+                    <i class="fa-solid fa-bolt-lightning"></i>
+                    <h3 class="card-heading">Exclusive Interviews</h3>
+                    <p class="card-title">Get unprecedented access to industry titans, startup founders, and tech
+                        visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep
+                        into their journeys, failures, and success strategies.</p>
+
+                </div>
+                <div class="box-5">
+                    <img src="assets/resource.png" alt="">
+                    <h3 class="card-heading">Rich Resources</h3>
+                    <p class="card-title">Access show notes, transcripts, and additional learning materials for every
+                        episode.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="video">
+
+        <div class="video-container">
+            <div class="heading-container">
+                <h2 class="video-heading">Featured Episodes</h2>
+            </div>
+            <div class="info-container">
+                <div class="video-info">
+                    <iframe class="iframe" width="100%" height="300"
+                        src="https://www.youtube.com/embed/hKrUxcucW7g?si=whBynal0a4hKIvhq" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-h">The Future of AI in Everyday Life</h3>
+                    <p class="video-title">Exploring how artificial intelligence is transforming our daily routines and
+                        what
+                        to expect in the next decade.</p>
+                    <div class="time">
+                        <p><img src="assets/clock.png" alt="">42 min</p>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <iframe class="iframe" width="100%" height="300px"
+                        src="https://www.youtube.com/embed/T8dTb9AAM8E?si=xhUJiPPcjU9WzrJs" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-h">Building Better Habits for Remote Work</h3>
+                    <p class="video-title">Practical strategies for staying productive and maintaining work-life balance
+                        in
+                        a remote environment.</p>
+                    <div class="time">
+                        <p><img src="assets/clock.png" alt="">35 min</p>
+                    </div>
+                </div>
+                <div class="video-info">
+                    <iframe class="iframe" width="100%" height="300px"
+                        src="https://www.youtube.com/embed/KhE1uxZCno0?si=l1uT1KPEImzEKkCy" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-h">Career Growth in Tech: A Roadmap</h3>
+                    <p class="video-title">Expert advice on navigating your tech career from junior developer to senior
+                        leadership roles.</p>
+                    <div class="time">
+                        <p><img src="assets/clock.png" alt="">51 min</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
