--- a/index.html
+++ b/index.html
@@ -182,6 +182,34 @@
 
         </div>
     </section>
+    <section class="host-section">
+        <div class="host-container">
+            <div class="host-heading">
+                <h2>Meet the Host</h2>
+            </div>
+            <div class="alex-container">
+                <img src="assets/host.png" alt="">
+                <div class="host-info">
+                    <h3>Alex Kumar</h3>
+                    <p class="host-title">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in
+                        the tech industry for over 10 years, working with startups and Fortune 500 companies. Through
+                        TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to
+                        grow in tech.</p>
+                    <div class="links">
+                        <ul>
+                            <li><a href=""><img src="assets/linkedin.png" alt=""></a></li>
+                            <li><a href=""></a><img src="assets/x.png" alt=""></li>
+                            <li><a href=""></a><img src="assets/instagram.png" alt=""></li>
+
+                            <li><a href=""></a><img src="assets/youtube.png" alt=""></li>
+
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
