--- a/index.html
+++ b/index.html
@@ -210,6 +210,29 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-container">
+            <h2 class="footer-heading">Tech<span class="footer-gradient">Wave</span></h2>
+            <div class="footer-info">
+                <ul>
+                    <li>
+                        <p><img src="assets/spotify.png" alt="">Spotify</p>
+                    </li>
+                    <li>
+                        <p><img src="assets/apple-podcast.png" alt="">Apple Podcasts</p>
+                    </li>
+                    <li>
+                        <p><img src="assets/youtube-podcast.png" alt="">YouTube</p>
+                    </li>
+                    <li>
+                        <p><img src="assets/twitter.png" alt="">Twitter</p>
+                    </li>
+                </ul>
+            </div>
+            <p class="footer-title">© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
